# Neo-TheOne

./: .gitignore  01-QUICKSTART-AgenticAI-Overview.MD  README.md
.github/instructions/: Solid Principles.instructions.md
AgentFirstDevelopment-VS-Code-url-shortner/: README.md  urls.db
AgentFirstDevelopment-VS-Code-url-shortner/base62-codec/: .gitignore  CLI_EXAMPLES.md  LICENSE  README.md  SETUP.md  cli.py  examples.py  pyproject.toml
AgentFirstDevelopment-VS-Code-url-shortner/base62-codec/base62/: __init__.py
AgentFirstDevelopment-VS-Code-url-shortner/base62-codec/tests/: __init__.py  test_base62.py  test_cli.py
AgentFirstDevelopment-VS-Code-url-shortner/url-shortener/: .gitignore  README.md  pyproject.toml
AgentFirstDevelopment-VS-Code-url-shortner/url-shortener/src/url_shortener/: __init__.py  config.py  db.py  encoder.py  main.py  models.py
AgentFirstDevelopment-VS-Code-url-shortner/url-shortener/static/: index.html  style.css
AgentFirstDevelopment-VS-Code-url-shortner/url-shortener/tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_encoder.py  test_integration.py
Custom-Agents-VS-Code/: README.md
Custom-Agents-VS-Code/calculator/: index.html  script.js  style.css
MAF/: README.md
MCP/: NeoMCP.sln  README.md
MCP/NeoMCP/: NeoMCP.csproj  Program.cs
Skills/: README.md
